from sqlalchemy import Column, Integer, String, DateTime, Float, JSON, ForeignKey
from sqlalchemy.orm import relationship
from datetime import datetime

from infrastructure.db.base import Base


class DecisionRecord(Base):
    __tablename__ = "decision_records"

    id = Column(Integer, primary_key=True, autoincrement=True)
    ticket_id = Column(
        Integer, ForeignKey("tickets.id", ondelete="CASCADE"), nullable=True, index=True
    )
    incident_id = Column(
        Integer, ForeignKey("incidents.id", ondelete="SET NULL"), nullable=True
    )
    event_id = Column(
        Integer, ForeignKey("operational_events.id", ondelete="SET NULL"), nullable=True
    )
    decision_ts = Column(DateTime, default=datetime.utcnow, index=True)
    feature_snapshot_json = Column(JSON)
    severity_score = Column(Float, default=0.0)
    urgency_score = Column(Float, default=0.0)
    business_impact_score = Column(Float, default=0.0)
    sla_risk_score = Column(Float, default=0.0)
    recurrence_score = Column(Float, default=0.0)
    dependency_criticality_score = Column(Float, default=0.0)
    actionability_score = Column(Float, default=0.0)
    uncertainty_penalty = Column(Float, default=0.0)
    priority_score = Column(Float, default=0.0, index=True)
    root_cause_hypothesis = Column(String(100))
    confidence_score = Column(Float, default=0.0)
    risk_level = Column(String(20), default="low")
    requires_human_review = Column(Integer, default=1)
    decision_version = Column(String(20), default="v1")
    rule_version = Column(String(20), default="rules-2024-Q1")
    model_version = Column(String(20), nullable=True)
    replay_hash = Column(String(64), nullable=True, index=True)
    explanation_json = Column(JSON)

    ticket = relationship("Ticket", back_populates="decisions")
    incident = relationship("Incident", back_populates="decisions")
    event = relationship("OperationalEvent", back_populates="decisions")
    recommendations = relationship(
        "Recommendation", back_populates="decision_record", cascade="all, delete-orphan"
    )
    human_feedback = relationship(
        "HumanFeedback", back_populates="decision", cascade="all, delete-orphan"
    )
